[package]
name = "astral"
version = "0.1.0"
authors = ["lain || Xavier Fernandez <xavier.fernandez92@myhunter.cuny.edu>"]
edition = "2018"
license = "MIT" 
description = "Yet another file transfer utility"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
file_shred = "1.1.0" 
flate2 = "1.0.20" 
serde = { version = "1.0.123", features = ["derive"]} 
bincode = "1.3.2" 
colored = "2.0.0"  
paris = "1.5.7" 
message-io = {git = "https://github.com/lemunozm/message-io/"} 
rust-argon2 = "0.8.3"
rand = "0.8.3"
age = "0.5.1"
secrecy = "0.7.0"
walkdir = "2.3.1"
blake3 = "0.3.7"
arrayvec = {version = "0.5.2", features = ["serde"]}

[[bin]]
name = "astral"
test = false 
bench = false

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true  